--- a/templates/menu.html
+++ b/templates/menu.html
@@ -8,9 +8,10 @@
         <nav class="sidebar">
             <h1>HelpDesk Light</h1>
             <ul>
-                <li><a href="{% url 'create_new' %}">Разбор заявок</a></li>
+                <li><a href="{% url 'ticket_work' %}">Разбор заявок</a></li>
                 <li><a href="{% url 'create_new' %}">Создать заявку</a></li>
-                <li><a href="{% url 'create_new' %}">Работа с заявками</a></li>
+                <li><a href="{% url 'do_tickets' %}">Работа с заявками</a></li>
+                <li><a href="{% url 'my_tickets' %}">Мои заявки</a></li>
                 <li><a href="{% url 'create_new' %}">Профиль</a></li>
             </ul>
         </nav>
