--- a/templates/create_ticket.html
+++ b/templates/create_ticket.html
@@ -15,30 +15,7 @@
                     <div class="col-md-6">
                         <form method="post">
                             {% csrf_token %}
-                            <div class="form-group">
-                                <label>Категория</label>
-                                {% render_field form.category class="form-control" %}
-                            </div>
-                            <div class="form-group">
-                                <label for="">Субкатегория:</label>
-                                {% render_field form.subcategory class="form-control"%}
-                            </div>
-                            <div class="form-group">
-                                <label for="">Телефон</label>
-                                {% render_field form.phone class="form-control"%}
-                            </div>
-                            <div class="form-group">
-                                <label for="">Корпус/кабинет</label>
-                                {% render_field form.place class="form-control"%}
-                            </div>
-                            <div class="form-group">
-                                <label for="">Электронная почта</label>
-                                {% render_field form.email class="form-control"%}
-                            </div>
-                            <div class="form-group">
-                                <label for="">Описание</label>
-                                {% render_field form.description class="form-control"%}
-                            </div>
+                            {{ form.as_p }}
                             <input type="submit" value="Отправить">
                         </form>
                     </div>
