added LDAP auth

--- a/templates/email/new_account.html
+++ b/templates/email/new_account.html
@@ -25,9 +25,7 @@
 </head>
 <body>
     <h1>Данные для доступа</h1>
-    <p>Для входа в систему используйте следующие данные:</p>
-    <p><strong>Логин:</strong> {{ username }}</p>
-    <p><strong>Пароль:</strong> {{ password }}</p>
+    <p>Для входа в систему используйте логин и пароль от корпоративной почты.</p>
     <p>Пожалуйста, сохраните эти данные в надежном месте.</p>
 </body>
 </html>
