--- a/templates/email/new.html
+++ b/templates/email/new.html
@@ -42,7 +42,7 @@
 <body>
     <h1>Ответ на ваше письмо</h1>
     <p>Здравствуйте,</p>
-    <p>Ваше письмо получено и направлено в работу:</p>
+    <p>Ваше письмо получено и отправлено на рассмотрение:</p>
     <blockquote>
         <p>Его токен - {{token}}</p>
     </blockquote>
